--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,21 +3,22 @@
     "username": "admin",
     "password": "admin",
     "database": "express-sequelize",
-    "host": "http://localhost:5432/",
-    "dialect": "sqlite"
+    "host": "localhost",
+    "port": 5432,
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
